--- a/admin/admin.htm
+++ b/admin/admin.htm
@@ -14,14 +14,18 @@
     </header>
 
     <main class="h-[100vh] flex justify-center items-center">
-      <form class="w-1/2 flex flex-col ml-[200px] lg:ml-[350px] gap-[20px]">
-        <h1 class="text-[30px] font-semibold text-center mb-3">Xəbər əlavə et</h1>
-        <label class="font-semibold text-[18px] " for="title">Başlıq əlavə et: </label>
-            <input class="border border-gray-400 p-1 rounded-md" id="title" type="text" /> 
-        <label class="font-semibold text-[18px] " for="desc">Mətn əlavə et: </label>
-            <textarea class="border border-gray-400 p-1 rounded-md" id="desc" type="text" rows="7"></textarea>
+      <form class="w-1/2 flex flex-col ml-[200px] lg:ml-[350px] gap-[15px]">
+        <h1 class="text-[30px] font-semibold text-center mb-3">Xəbər yerləşdir</h1>
+        <label class="font-semibold text-[18px]" for="title">Başlıq əlavə et: </label>
+            <input class="border border-gray-400 rounded-md" id="title" type="text" /> 
+        <label class="font-semibold text-[18px]" for="desc">Mətn əlavə et: </label>
+            <textarea class="border border-gray-400 rounded-md" id="desc" type="text" rows="7"></textarea>
         <label class="font-semibold text-[18px] " for="cover">Şəkil əlavə et: </label>
-            <input class="border border-gray-400 p-1 rounded-md" id="cover" type="file" />
+            <input class="border border-gray-400 rounded-md" id="cover" type="file" />
+        <label class="font-semibold text-[18px] " for="date">Tarix əlavə et: </label>
+            <input class="border border-gray-400 rounded-md" id="date" type="date" />
+        <label class="font-semibold text-[18px] " for="time">Saat əlavə et: </label>
+            <input class="border border-gray-400 rounded-md" id="time" type="time" />
         <button type="submit" class="w-full lg:w-[200px] m-auto bg-green-800 text-white p-2 rounded-md mt-5">Yüklə</button>
       </form>
     </main>
