style change in admin.js

--- a/index.htm
+++ b/index.htm
@@ -232,117 +232,6 @@
         <div class="w-0 lg:w-1/2"></div>
       </div>
       <div id="news" class="flex flex-wrap justify-center gap-4 px-4 md:p-0">
-        <div
-          class="w-full xs:w-[48%] lg:w-[32%] rounded-md border border-gray-400 h-[450px] xs:[400px]"
-        >
-          <div class="relative h-[50%]">
-            <img
-              class="w-full h-full object-cover"
-              src="img/xeber2.webp"
-              alt="news cover"
-            />
-            <div
-              class="absolute right-[5%] bottom-[5%] w-[70px] flex items-center justify-around bg-[#d35462] text-white rounded-md p-1"
-            >
-              <i class="fa-solid fa-video"></i>Video
-            </div>
-          </div>
-          <div class="p-4">
-            <div class="flex gap-5 text-[12px] font-semibold text-gray-500">
-              <span
-                ><i class="fa-regular fa-calendar mr-2"></i>4 OKT, 2024 /
-                14:28</span
-              >
-              <span><i class="fa-solid fa-eye mr-2"></i>1799</span>
-            </div>
-            <h2 class="text-[18px] font-semibold my-5">
-              <a href="#"
-                >İranın İsrailə raket hücumunun yeni görüntüləri yayılıb</a
-              >
-            </h2>
-            <div class="flex justify-between items-center">
-              <span class="text-[#1b95a1] text-[14px] font-bold">Dünya</span>
-              <div class="flex items-center gap-4">
-                <span><i class="fa-regular fa-thumbs-up mr-1"></i>10</span>
-                <span><i class="fa-regular fa-thumbs-down mr-1"></i>0</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div
-          class="w-full xs:w-[48%] lg:w-[32%] rounded-md border border-gray-400 h-[450px] xs:[400px]"
-        >
-          <div class="relative h-[50%]">
-            <img
-              class="w-full h-full object-cover"
-              src="img/xeber2.webp"
-              alt="news cover"
-            />
-            <div
-              class="absolute right-[5%] bottom-[5%] w-[70px] flex items-center justify-around bg-[#d35462] text-white rounded-md p-1"
-            >
-              <i class="fa-solid fa-video"></i>Video
-            </div>
-          </div>
-          <div class="p-4">
-            <div class="flex gap-5 text-[12px] font-semibold text-gray-500">
-              <span
-                ><i class="fa-regular fa-calendar mr-2"></i>4 OKT, 2024 /
-                14:28</span
-              >
-              <span><i class="fa-solid fa-eye mr-2"></i>1799</span>
-            </div>
-            <h2 class="text-[18px] font-semibold my-5">
-              <a href="#"
-                >İranın İsrailə raket hücumunun yeni görüntüləri yayılıb</a
-              >
-            </h2>
-            <div class="flex justify-between items-center">
-              <span class="text-[#1b95a1] text-[14px] font-bold">Dünya</span>
-              <div class="flex items-center gap-4">
-                <span><i class="fa-solid fa-thumbs-up mr-1"></i>10</span>
-                <span><i class="fa-regular fa-thumbs-down mr-1"></i>0</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div
-          class="w-full xs:w-[48%] lg:w-[32%] rounded-md border border-gray-400 h-[450px] xs:[400px]"
-        >
-          <div class="relative h-[50%]">
-            <img
-              class="w-full h-full object-cover"
-              src="img/xeber2.webp"
-              alt="news cover"
-            />
-            <div
-              class="absolute right-[5%] bottom-[5%] w-[70px] flex items-center justify-around bg-[#d35462] text-white rounded-md p-1"
-            >
-              <i class="fa-solid fa-video"></i>Video
-            </div>
-          </div>
-          <div class="p-4">
-            <div class="flex gap-5 text-[12px] font-semibold text-gray-500">
-              <span
-                ><i class="fa-regular fa-calendar mr-2"></i>4 OKT, 2024 /
-                14:28</span
-              >
-              <span><i class="fa-solid fa-eye mr-2"></i>1799</span>
-            </div>
-            <h2 class="text-[18px] font-semibold my-5">
-              <a href="#"
-                >İranın İsrailə raket hücumunun yeni görüntüləri yayılıb</a
-              >
-            </h2>
-            <div class="flex justify-between items-center">
-              <span class="text-[#1b95a1] text-[14px] font-bold">Dünya</span>
-              <div class="flex items-center gap-4">
-                <span><i class="fa-solid fa-thumbs-up mr-1"></i>10</span>
-                <span><i class="fa-regular fa-thumbs-down mr-1"></i>0</span>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </main>
 
@@ -441,5 +330,6 @@
         },
       });
     </script>
+    <script src="js/app.js"></script>
   </body>
 </html>
