--- a/pages/detail.htm
+++ b/pages/detail.htm
@@ -131,68 +131,7 @@
     <!-- MAIN HISSE -->
     <main class="container md:mt-[40px]">
       <div class="mb-[80px] flex px-2">
-        <div class="lg:w-1/2">
-          <div>
-            <img
-              class="block w-full h-[60%] object-cover"
-              src="../img/detail.webp"
-              alt="slide photo"
-            />
-          </div>
-          <div class="py-4">
-            <div
-              class="flex justify-between gap-5 text-[12px] xs:text-[14px] font-semibold text-gray-500"
-            >
-              <span class="font-bold">Ana səhifə / Dünya</span>
-              <div>
-                <span
-                  ><i class="fa-regular fa-calendar mr-2"></i>4 OKT, 2024 /
-                  14:28</span
-                >
-                <span><i class="fa-solid fa-eye mr-2"></i>1799</span>
-              </div>
-            </div>
-            <h2 class="text-[30px] font-semibold my-5">
-              İsrail Livanla Suriyanın yolunu bağladı
-            </h2>
-            <div class="flex justify-between">
-              <div class="flex items-center gap-[30px] text-[18px]">
-                <span><i class="fa-regular fa-thumbs-up mr-1"></i>38</span>
-                <span><i class="fa-regular fa-thumbs-down mr-1"></i>78</span>
-              </div>
-              <div class="flex items-center gap-5">
-                <span class="font-semibold text-[30px]">A-</span>
-                <span class="font-semibold text-[40px]">A+</span>
-              </div>
-            </div>
-          </div>
-          <div class="flex flex-col gap-5 text-gray-600">
-            <p>
-              İsrail hərbçiləri (SAXAL) Livanda Suriya ilə sərhəddə yerləşən
-              Məsnaa keçid məntəqəsi yaxınlığında qaçqınların bombardmanlardan
-              qaçdığı trasa zərbə endirib.
-            </p>
-            <p>
-              <span class="font-bold">Oxu.Az</span> xəbər verir ki, bu barədə
-              "Reuters" məlumat yayıb.
-            </p>
-            <p>
-              Livanın nəqliyyat naziri Əli Hamiyenin sözlərinə görə, son 10 gün
-              ərzində əksəriyyəti suriyalı olmaqla, 300 minə yaxın insan bu
-              yoldan istifadə edib. O, həmçinin qeyd edib ki, sərhəd keçidi
-              yaxınlığındakı əraziyə zərbədən sonra eni 4 metr olan çuxur
-              yaranıb.
-            </p>
-            <p>
-              İsrail nəzarət-buraxılış məntəqəsi yaxınlığındakı ərazinin atəşə
-              tutulmasını "Hizbullah" təşkilatının Livana hərbi texnika daşımaq
-              üçün sərhəd keçidindən istifadə etməsi ilə izah edir. İsrail
-              ordusunun nümayəndəsi Aviçay Adrai "X" sosial şəbəkəsindəki
-              hesabında İsrail ordusunun silah qaçaqmalçılığına icazə
-              verməyəcəyini yazıb.
-            </p>
-          </div>
-        </div>
+        <div id="aboutNews" class="lg:w-1/2"></div>
         <div class="w-0 lg:w-1/2"></div>
       </div>
     </main>
@@ -274,5 +213,6 @@
         </div>
       </div>
     </footer>
+    <script src="/js/detail.js"></script>
   </body>
 </html>
