--- a/admin/admin.htm
+++ b/admin/admin.htm
@@ -4,24 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../src/output.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Admin panel</title>
   </head>
   <body>
     <main class="flex justify-between w-full">
-      <div class="h-[100vh] bg-black w-[20%] p-5 z-[5]">
+      <div class="min-h-[100vh] bg-black w-[20%] p-5 z-[5]">
         <p class="text-[26px] text-white">Admin Panel</p>
       </div>
       <div class="flex flex-col justify-around items-center w-[80%]">
-        <div>
-          <button onclick="" class="bg-green-600 w-[200px] text-white p-2 rounded-md">
+        <div class="my-[50px]">
+          <button onclick="handlePopup()" class="bg-green-600 w-[200px] text-white p-2 rounded-md">
             Xəbər yerləşdir
           </button>
         </div>
         <div
+          onclick="handlePopup()"
           id="popup"
-          class="hidden w-full h-full justify-center items-center fixed top-[-100%] backdrop-blur-[2px]"
+          class="w-full h-full flex justify-center items-center fixed top-[-100%] backdrop-blur-[5px]"
         >
-          <form class="w-[500px] flex flex-col gap-[10px]">
+          <form onsubmit="handleSubmit(event)" onclick="preventClick(event)" class="w-[500px] flex flex-col gap-[8px] border-2 border-green-800 text-green-950 p-4 rounded-md">
             <h1 class="text-[30px] font-semibold text-center mb-3">
               Xəbər yerləşdir
             </h1>
@@ -33,7 +35,7 @@
             />
             <label class="font-semibold" for="desc">Mətn əlavə et: </label>
             <textarea
-              class="border border-gray-400 rounded-md"
+              class="border border-gray-400 rounded-md outline-0 p-3"
               id="desc"
               type="text"
               rows="7"
@@ -50,11 +52,11 @@
               id="date"
               type="date"
             />
-            <label class="font-semibold" for="time">Saat əlavə et: </label>
+            <label class="font-semibold" for="baxis">Baxış sayı: </label>
             <input
               class="border border-gray-400 rounded-md"
-              id="time"
-              type="time"
+              id="baxis"
+              type="baxis"
             />
             <button
               type="submit"
@@ -65,142 +67,28 @@
           </form>
         </div>
         <div class="container p-2 mx-auto sm:p-4 text-gray-800">
-          <h2 class="mb-4 text-2xl font-bold text-center leading-tight">
+          <h2 class="mb-4 text-3xl font-bold text-center leading-tight">
             Xəbərlər
           </h2>
           <div class="overflow-x-auto">
-            <table class="min-w-full text-xs">
+            <table class="w-full">
               <colgroup>
                 <col />
                 <col />
                 <col />
                 <col />
                 <col />
-                <col class="w-24" />
               </colgroup>
               <thead class="bg-gray-300">
                 <tr class="text-left">
-                  <th class="p-3">Invoice #</th>
-                  <th class="p-3">Client</th>
-                  <th class="p-3">Issued</th>
-                  <th class="p-3">Due</th>
-                  <th class="p-3 text-right">Amount</th>
-                  <th class="p-3">Status</th>
+                  <th class="p-3">Başlıq</th>
+                  <th class="p-3">Mətn</th>
+                  <th class="p-3">Tarix</th>
+                  <th class="p-3">Baxış sayı</th>
+                  <th class="p-3 text-center">Sil</th>
                 </tr>
               </thead>
               <tbody>
-                <tr
-                  class="border-b border-opacity-20 border-gray-300 bg-gray-50"
-                >
-                  <td class="p-3">
-                    <p>97412378923</p>
-                  </td>
-                  <td class="p-3">
-                    <p>Microsoft Corporation</p>
-                  </td>
-                  <td class="p-3">
-                    <p>14 Jan 2022</p>
-                    <p class="text-gray-600">Friday</p>
-                  </td>
-                  <td class="p-3">
-                    <p>01 Feb 2022</p>
-                    <p class="text-gray-600">Tuesday</p>
-                  </td>
-                  <td class="p-3 text-right">
-                    <p>$15,792</p>
-                  </td>
-                  <td class="p-3 text-right">
-                    <span
-                      class="px-3 py-1 font-semibold rounded-md bg-violet-600 text-gray-50"
-                    >
-                      <span>Pending</span>
-                    </span>
-                  </td>
-                </tr>
-                <tr
-                  class="border-b border-opacity-20 border-gray-300 bg-gray-50"
-                >
-                  <td class="p-3">
-                    <p>97412378923</p>
-                  </td>
-                  <td class="p-3">
-                    <p>Tesla Inc.</p>
-                  </td>
-                  <td class="p-3">
-                    <p>14 Jan 2022</p>
-                    <p class="text-gray-600">Friday</p>
-                  </td>
-                  <td class="p-3">
-                    <p>01 Feb 2022</p>
-                    <p class="text-gray-600">Tuesday</p>
-                  </td>
-                  <td class="p-3 text-right">
-                    <p>$275</p>
-                  </td>
-                  <td class="p-3 text-right">
-                    <span
-                      class="px-3 py-1 font-semibold rounded-md bg-violet-600 text-gray-50"
-                    >
-                      <span>Pending</span>
-                    </span>
-                  </td>
-                </tr>
-                <tr
-                  class="border-b border-opacity-20 border-gray-300 bg-gray-50"
-                >
-                  <td class="p-3">
-                    <p>97412378923</p>
-                  </td>
-                  <td class="p-3">
-                    <p>Coca Cola co.</p>
-                  </td>
-                  <td class="p-3">
-                    <p>14 Jan 2022</p>
-                    <p class="text-gray-600">Friday</p>
-                  </td>
-                  <td class="p-3">
-                    <p>01 Feb 2022</p>
-                    <p class="text-gray-600">Tuesday</p>
-                  </td>
-                  <td class="p-3 text-right">
-                    <p>$8,950,500</p>
-                  </td>
-                  <td class="p-3 text-right">
-                    <span
-                      class="px-3 py-1 font-semibold rounded-md bg-violet-600 text-gray-50"
-                    >
-                      <span>Pending</span>
-                    </span>
-                  </td>
-                </tr>
-                <tr
-                  class="border-b border-opacity-20 border-gray-300 bg-gray-50"
-                >
-                  <td class="p-3">
-                    <p>97412378923</p>
-                  </td>
-                  <td class="p-3">
-                    <p>Nvidia Corporation</p>
-                  </td>
-                  <td class="p-3">
-                    <p>14 Jan 2022</p>
-                    <p class="text-gray-600">Friday</p>
-                  </td>
-                  <td class="p-3">
-                    <p>01 Feb 2022</p>
-                    <p class="text-gray-600">Tuesday</p>
-                  </td>
-                  <td class="p-3 text-right">
-                    <p>$98,218</p>
-                  </td>
-                  <td class="p-3 text-right">
-                    <span
-                      class="px-3 py-1 font-semibold rounded-md bg-violet-600 text-gray-50"
-                    >
-                      <span>Pending</span>
-                    </span>
-                  </td>
-                </tr>
               </tbody>
             </table>
           </div>
