some changes in admin.js

--- a/admin/admin.htm
+++ b/admin/admin.htm
@@ -32,31 +32,36 @@
               class="border border-gray-400 rounded-md"
               id="title"
               type="text"
+              required ="required"
             />
             <label class="font-semibold" for="desc">Mətn əlavə et: </label>
             <textarea
               class="border border-gray-400 rounded-md outline-0 p-3"
               id="desc"
               type="text"
+              required ="required"
               rows="7"
             ></textarea>
             <label class="font-semibold" for="cover">Şəkil əlavə et: </label>
             <input
               class="border border-gray-400 rounded-md"
               id="cover"
-              type="file"
+              type="text"
+              required ="required"
             />
             <label class="font-semibold" for="date">Tarix əlavə et: </label>
             <input
               class="border border-gray-400 rounded-md"
               id="date"
               type="date"
+              required ="required"
             />
             <label class="font-semibold" for="baxis">Baxış sayı: </label>
             <input
               class="border border-gray-400 rounded-md"
               id="baxis"
               type="baxis"
+              required ="required"
             />
             <button
               type="submit"
